# sokoban

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  hello.py  index.html  pyproject.toml  sokoban.py
.github/workflows/: deploy.yml
src/sokoban/: __init__.py  main.py
